style : 불필요한 롬복 제거 및 코드 정리